[Closes #100] Load default fafram configuration from http